project(CycloneDDS CXX C)

# 경로 앞에 prefix를 붙여서 새로운 리스트 생성 함수
function(PREPEND var prefix)
  set(listVar "")
  foreach(f ${ARGN})
    list(APPEND listVar "${prefix}/${f}")
  endforeach()
  set(${var} "${listVar}" PARENT_SCOPE)
endfunction()


# 다양한 기능의 ON/OFF 옵션 설정
option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
option(WERROR "Treat compiler warnings as errors" OFF)
option(BUILD_IDLC "Build IDL preprocessor" ON)
option(BUILD_DDSPERF "Build ddsperf tool" ON)
option(WITH_ZEPHYR "Build for Zephyr RTOS" OFF)
option(BUILD_TESTING "Build the testing tree." OFF)
option(EXPORT_ALL_SYMBOLS "Export all symbols from the library." OFF)
option(BUILD_IDLC_XTESTS "Build the idlc compile tests" OFF)
option(BUILD_EXAMPLES "Build examples." ON)
option(ENABLE_LTO "Enable link time optimization." ON)

option(ENABLE_SECURITY "OMG DDS 보안 지원 활성화" ON)
option(ENABLE_LIFESPAN "Lifespan QoS 지원 활성화" ON)
option(ENABLE_DEADLINE_MISSED "Deadline Missed QoS 지원 활성화" ON)
option(SKIP_DEADLINE_UPDATE "Deadline 업데이트 테스트 건너뛰기" OFF)
option(ENABLE_NETWORK_PARTITIONS "네트워크 파티션 지원 활성화" ON)
set(ENABLE_SOURCE_SPECIFIC_MULTICAST "AUTO" CACHE STRING "소스 기반 멀티캐스트 지원 활성화")
set_property(CACHE ENABLE_SOURCE_SPECIFIC_MULTICAST PROPERTY STRINGS ON OFF AUTO)
set(ENABLE_IPV6 "AUTO" CACHE STRING "IPv6 지원 활성화")
set_property(CACHE ENABLE_IPV6 PROPERTY STRINGS ON OFF AUTO)
option(ENABLE_TYPELIB "타입 라이브러리 지원 활성화" ON)
option(ENABLE_TYPE_DISCOVERY "타입 자동 탐지 지원 활성화" ON)
option(ENABLE_TOPIC_DISCOVERY "토픽 자동 탐지 지원 활성화" ON)
option(ENABLE_QOS_PROVIDER "QoS 제공자 지원 활성화" ON)


set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules" ${CMAKE_MODULE_PATH})
set(generated_defconfig_src "${CMAKE_CURRENT_SOURCE_DIR}/core/ddsi/defconfig.c")
set(CMAKE_POSITION_INDEPENDENT_CODE ON)


# 의존성 체크
if(ENABLE_TYPE_DISCOVERY)
  if(NOT ENABLE_TYPELIB)
    message(FATAL_ERROR "ENABLE_TYPE_DISCOVERY는 ENABLE_TYPELIB이 활성화되어야 합니다")
  endif()
endif()
if(ENABLE_TOPIC_DISCOVERY)
  if(NOT ENABLE_TYPE_DISCOVERY)
    message(FATAL_ERROR "ENABLE_TOPIC_DISCOVERY는 ENABLE_TYPE_DISCOVERY가 활성화되어야 합니다")
  endif()
endif()

# OpenSSL 관련 설정
set(ENABLE_SSL "AUTO" CACHE STRING "OpenSSL 지원 활성화")
set_property(CACHE ENABLE_SSL PROPERTY STRINGS ON OFF AUTO)
if(ENABLE_SSL)
  if(NOT ENABLE_SSL STREQUAL "AUTO")
    find_package(OpenSSL REQUIRED)
  else()
    find_package(OpenSSL QUIET)
    if(OPENSSL_FOUND)
      message(STATUS "OpenSSL 빌드합니다")
      set(ENABLE_SSL "ON")
    else()
      message(STATUS "OpenSSL 없이 빌드합니다")
      set(ENABLE_SSL "OFF")
    endif()
  endif()
endif()


# TCP+TLS 지원 설정 (OpenSSL 의존)
set(ENABLE_TCP_TLS "AUTO" CACHE STRING "TCP+TLS 지원 활성화 (ENABLE_SSL 필요)")
set_property(CACHE ENABLE_TCP_TLS PROPERTY STRINGS ON OFF AUTO)
if(ENABLE_TCP_TLS)
  if(ENABLE_TCP_TLS STREQUAL "AUTO")
    set(ENABLE_TCP_TLS "${ENABLE_SSL}")
  elseif(ENABLE_TCP_TLS AND NOT ENABLE_SSL)
    message(FATAL "ENABLE_TCP_TLS는 ENABLE_SSL이 필요합니다")
  endif()
endif()


# 보안 비활성화 시 메시지 출력
if(NOT ENABLE_SECURITY)
  message(STATUS "OMG DDS 보안 없이 빌드합니다")
endif()


# Iceoryx 공유 메모리 지원 설정 (선호하나 필수는 아님)
set(ENABLE_ICEORYX "AUTO" CACHE STRING "공유 메모리 지원 활성화")
set_property(CACHE ENABLE_ICEORYX PROPERTY STRINGS ON OFF AUTO)


# 하위 호환성 처리 (ENABLE_SHM → ENABLE_ICEORYX)
set(ENABLE_SHM "AUTO" CACHE STRING "구버전 호환: ENABLE_ICEORYX 사용 권장")
set_property(CACHE ENABLE_SHM PROPERTY STRINGS ON OFF AUTO)
if(ENABLE_ICEORYX STREQUAL "AUTO")
  if(NOT ENABLE_SHM STREQUAL "AUTO")
    message(WARNING "구버전 ENABLE_SHM 설정을 ENABLE_ICEORYX로 복사합니다")
    set(ENABLE_ICEORYX ${ENABLE_SHM})
  endif()
endif()
if(ENABLE_ICEORYX)
  if(NOT ENABLE_ICEORYX STREQUAL "AUTO")
    set(iceoryx_required REQUIRED)
  else()
    set(iceoryx_required QUIET)
  endif()
  find_package(iceoryx_hoofs ${iceoryx_required})
  if(${iceoryx_hoofs_FOUND})
    find_package(iceoryx_posh ${iceoryx_required})
    set(ENABLE_ICEORYX ${iceoryx_posh_FOUND} CACHE STRING "" FORCE)
  else()
    set(ENABLE_ICEORYX "OFF")
  endif()
endif()


# 테스트 및 하위 디렉토리 추가
add_subdirectory(tools)
add_subdirectory(ddsrt)
add_subdirectory(idl)
add_subdirectory(security)
if(ENABLE_ICEORYX)
  add_subdirectory(psmx_iox)
endif()
add_subdirectory(core)
add_library(compat INTERFACE)
